# taasty-diet

./: .gitignore  CHATGPT_ANALYSIS_SUMMARY.md  CHATGPT_COMPLETE_LOGCAT_REQUEST.md  ai_model_analysis.txt  build.gradle.kts  complete_full_logcat.txt  complete_logcat_analysis.txt  contentresolver_test_logcat.txt  file_copy_test_logcat.txt  gradle.properties  local_model_test_logcat.txt  quick_ai_fix.ps1  settings.gradle.kts  test_results_logcat.txt
app/: build.gradle.kts
app/src/androidTest/java/com/example/tastydiet/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: andhra_recipes.json  authentic_andhra_telangana_north_recipes.json  comprehensive_food_database.json  full_offline_recipes.json  item_meta.csv  offline_voice_commands.csv  offline_voice_commands_mapped.csv  recipes_with_pairings.json
app/src/main/assets/assist/listening/: README.txt
app/src/main/assets/lottie/: assist_listening.json
app/src/main/assets/vosk-model-small-te-0.42/conf/: mfcc.conf
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  llama_jni.h  llama_wrapper.cpp  llama_wrapper.h
app/src/main/java/com/example/tastydiet/: AppDatabase.kt  FamilyProfileViewModel.kt  InventoryViewModel.kt  MainActivity.kt  MealPlanViewModel.kt  MealPlannerViewModel.kt  SimpleMainActivity.kt
app/src/main/java/com/example/tastydiet/data/: AnalyticsDao.kt  DatabaseInitializer.kt  FamilyMemberDao.kt  FoodDatabaseImporter.kt  (+24 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/tastydiet/: ExampleUnitTest.kt
gradle/: libs.versions.toml
(+127 files in other folders)
